--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="container">
             <h2 class="py-4 text-center">DESTACADOS</h2>
             <div class="row">
-                <div class="col">
+                <div class="col-xs-12 col-lg-3 my-3">
                     <div class="card border-black">
                         <a href="#" data-bs-toggle="tooltip" title="Parque Nacional Torres del Paine"><img src="assets/img/card1.jpg" class="card-img-top img-card" alt="..."></a>
                         <div class="card-body description-2">
@@ -115,7 +115,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col">
+                <div class="col-xs-12 col-lg-3 my-3">
                     <div class="card border-black">
                         <a href="#" data-toggle="tooltip-2" title="Laguna Lejía"><img src="assets/img/card2.jpg" class="card-img-top img-card" alt="..."></a>
                         <div class="card-body description-2">
@@ -124,7 +124,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col">
+                <div class="col-xs-12 col-lg-3 my-3">
                     <div class="card border-black">
                         <a href="#" data-toggle="tooltip-3" title="Salar de Atacama"><img src="assets/img/card3.jpg" class="card-img-top img-card" alt="..."></a>
                         <div class="card-body description-2">
@@ -133,7 +133,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col">
+                <div class="col-xs-12 col-lg-3 my-3">
                     <div class="card border-black">
                         <a href="#" data-toggle="tooltip-4" title="Parque Nacional Alerce Andino"><img src="assets/img/card4.jpg" class="card-img-top img-card" alt="..."></a>
                         <div class="card-body description-2">
